# django-rest-jwt-auth

./: LICENSE  README.md  manage.py  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
docs/: drf_jwt.yaml
scripts/: start_api.sh
src/domain/: account.py  exceptions.py
src/domain/entities/: account.py
src/domain/services/: account.py  constants.py
src/infrastructure/adminsite/: __init__.py
src/infrastructure/adminsite/account/: admin.py
src/infrastructure/api/routes/: urls.py
src/infrastructure/api/routes/account/: routers.py  urls.py
src/infrastructure/api/views/: account.py
src/infrastructure/factories/: account.py
src/infrastructure/orm/db/: apps.py
src/infrastructure/server/: urls.py  wsgi.py
src/infrastructure/settings/: base.py  development.py  test.py
src/interface/controllers/: account.py  utils.py
src/interface/middlewares/: auth.py
src/interface/repositories/: account.py
src/interface/routes/: accounts.py
src/interface/routes/core/: constants.py  routing.py
src/interface/serializers/: account.py  utils.py
src/usecases/: account.py
tests/: fixtures.py
tests/domain/: test_account.py  test_account_entities.py
tests/domain/entities/: test_account_entities.py
tests/domain/services/: test_account_services.py
tests/infrastructure/orm/db/: factories.py
tests/interface/controllers/: test_account_controllers.py  test_account_utils.py
tests/interface/repositories/: test_account_repositories.py
tests/interface/serializers/: test_account_serializers.py
tests/usecases/: test_account_interactors.py
(+11 files in other folders)
