[tool.poetry]
name = "djangorest-jwt"
version = "0.1.0"
description = "API backend for JWT authentication"
authors = ["sdediego <sergiodediego@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
psycopg2 = "^2.9.3"
marshmallow = "^3.15.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
